# maybe

./: CMakeLists.txt  README.md
include/l0-infra/base/: BoundedIntType.h  Enum.h  EnumType.h  Int.h  Placement.h  RefPlacement.h  Ref_Placement.h
include/l0-infra/base/detail/: Ref_Placement.h  StorageTrait.h  Val_Placement.h  Value_Placement.h
include/l0-infra/maybe/: Maybe.h  Option.h
include/l0-infra/maybe/detail/: Int_Maybe.h  Ref_Maybe.h  Ref_Option.h  Val_Maybe.h
include/l0-infra/option/: Option.h
include/l0-infra/option/detail/: Int_Option.h  Ref_Option.h  Val_Option.h
test/: IntMaybeTest.cpp  IntTest.cpp  MaybeTest.cpp  NonTrivialMaybeTest.cpp  PlacementTest.cpp  RefMaybeTest.cpp  Ref_Option_Test.cpp  Ref_PlacementTest.cpp  TrivalMaybeTest.cpp  std_optional_test.cpp
